# smplx

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup/: action.yml
.github/scripts/: setup-simplex
.github/workflows/: ci.yml  crates.yml  fixtures.yml
crates/cli/: Cargo.toml
crates/cli/assets/: Simplex.default.toml
crates/cli/src/: cli.rs
crates/cli/src/commands/: commands.rs  core.rs  example.rs  init.rs  mod.rs  new.rs  test.rs
crates/cli/src/config/: core.rs  error.rs
crates/macros/: Cargo.toml
crates/regtest/: Cargo.toml
crates/regtest/src/: args.rs  client.rs  config.rs  regtest.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: global.rs  lib.rs  utils.rs
crates/sdk/src/program/: core.rs  error.rs  logging.rs  mod.rs
crates/sdk/src/signer/: core.rs  error.rs  mod.rs  wtns_injector.rs
crates/sdk/src/transaction/: final_transaction.rs  partial_input.rs  partial_output.rs  utxo.rs
crates/simplex/: Cargo.toml
crates/simplex/src/: lib.rs
crates/simplex/tests/ui/: either_with_single_witness.rs  exotic_values.rs  list_check.rs
crates/simplex/tests/ui_simfs/: either_with_single_witness.simf  exotic_values.simf  list_check.simf
crates/test/: Cargo.toml
crates/test/src/: config.rs  context.rs  error.rs  lib.rs
crates/test/src/macros/: core.rs
examples/basic/: README.md  Simplex.toml
examples/basic/tests/: basic_test.rs  confidential_test.rs  log_level.rs  nested_sig.rs
fixtures/: Cargo.toml  Simplex.toml
fixtures/simf/: dummy_panic.simf  nested_sig.simf
fixtures/tests/: basic_test.rs  confidential_test.rs  ignore_default_tests.rs  log_level.rs  nested_sig.rs
simplexup/: README.md  simplexup
