[package]
name = "smplx-cli"
version = "0.0.4"
description = "Simplex cli with various utilities to manage a simplicity project"
license.workspace = true
edition.workspace = true
repository = "https://github.com/BlockstreamResearch/smplx"
readme = "../../README.md"

[[bin]]
name = "simplex"
path = "src/bin/main.rs"

[lints]
workspace = true

[dependencies]
smplx-regtest = { workspace = true }
smplx-test = { workspace = true }
smplx-build = { workspace = true }
smplx-sdk = { workspace = true }

thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
minreq = { workspace = true }

anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.23.9" }
ctrlc = { version = "3.5.2", features = ["termination"] }
serde_json = { version = "1.0.149" }
