[package]
name = "smplx-macros"
version = "0.0.4"
description = "Simplex macros re-export package"
license.workspace = true
edition.workspace = true
repository = "https://github.com/BlockstreamResearch/smplx"
readme = "../../README.md"

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
smplx-build = { workspace = true } 
smplx-test = { workspace = true }

syn = { version = "2.0.114", default-features = false, features = ["parsing", "proc-macro"] }
