[package]
name = "smplx-regtest"
version = "0.0.4"
description = "Simplex regtest command internal implementation"
license.workspace = true
edition.workspace = true
repository = "https://github.com/BlockstreamResearch/smplx"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
smplx-sdk = { workspace = true }

thiserror = { workspace = true }
electrsd = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
