[package]
name = "smplx-std"
version = "0.0.4"
description = "A blazingly-fast, ux-first simplicity development framework"
rust-version = "1.91.0"
license.workspace = true
edition.workspace = true
repository = "https://github.com/BlockstreamResearch/smplx"
readme = "../../README.md"
documentation = "https://docs.rs/smplx-std"
keywords = ["liquid", "elements", "smart-contracts", "simplicity", "framework"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "simplex"

[lints]
workspace = true

[dependencies]
smplx-macros = { workspace = true }
smplx-test = { workspace = true }
smplx-sdk = { workspace = true }

serde = { workspace = true }
simplicityhl = { workspace = true, features = ["serde"] }

either = { version = "1.15.0", features = ["serde"] }

[dev-dependencies]
trybuild = { version = "1.0.115" }
