[package]
name = "smplx-test"
version = "0.0.4"
description = "Simplex test command internal implementation"
license.workspace = true
edition.workspace = true
repository = "https://github.com/BlockstreamResearch/smplx"
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
smplx-sdk = { workspace = true }
smplx-regtest = { workspace = true }

thiserror = { workspace = true }
simplicityhl = { workspace = true }
electrsd = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

syn = { version = "2.0.114", default-features = false, features = ["proc-macro", "full", "parsing", "derive", "clone-impls", "extra-traits", "printing"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = { version = "1.0.44" }
